--- a/examples/basic_example.html
+++ b/examples/basic_example.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>UserInfo basic example</title>
     <script type="text/javascript" src="app.js"></script>
-    <script type="text/javascript" src="../dist/userinfo.0.0.1.min.js"></script>
+    <script type="text/javascript" src="../dist/userinfo.min.js"></script>
     <script type="text/javascript">
     UserInfo.getInfo(function(data) {
       showData(data);
