--- a/examples/requirejs_example.html
+++ b/examples/requirejs_example.html
@@ -8,7 +8,7 @@
     <script type="text/javascript">
     requirejs.config({
       "paths": {
-        "userinfo": "../dist/userinfo.0.0.1.min"
+        "userinfo": "../dist/userinfo.min"
       }
     });
     </script>
